[change] ルートの変更
showページなど各id毎に表示したいページに遷移できるようにresourcesで変更。

また、仮置きで画面の遷移ができるようにlinkを追加

--- a/app/views/binary/index.html.erb
+++ b/app/views/binary/index.html.erb
@@ -1,4 +1,11 @@
 <div>
   <h1 class="font-bold text-4xl">Binary#index</h1>
   <p>Find me in app/views/binary/index.html.erb</p>
+
+  <% @binaries.each do |binary| %>
+    <p>
+      <%= link_to binary.title, binary_path(binary.id)  %>
+      <%= binary.context %>
+    </p>
+  <% end %>
 </div>
