[add] 日記の作成をできるようにした
新規作成ボタンと作成時のフォームと導線作りを行った。
binaryを複数形にしないとと今思った

--- a/app/views/binary/index.html.erb
+++ b/app/views/binary/index.html.erb
@@ -1,6 +1,6 @@
 <div>
   <h1 class="font-bold text-4xl">Binary#index</h1>
-  <p>Find me in app/views/binary/index.html.erb</p>
+  <%= link_to 'new Binary', new_binary_path %>
 
   <% @binaries.each do |binary| %>
     <p>
