--- a/app/views/binary/show.html.erb
+++ b/app/views/binary/show.html.erb
@@ -30,7 +30,7 @@
 
     <div class="actions">
       <%= link_to 'Edit', edit_binary_path(@binary), class: 'btn btn-primary' %>
-      <%= link_to 'Delete', @binary, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
+      <%= link_to 'Delete', @binary, method: :delete, data: { confirm: 'Are you sure?', turbo_method: :delete }, class: 'btn btn-danger' %>
       <%= link_to 'Back', binary_index_path, class: 'btn btn-secondary' %>
     </div>
   <% end %>
