--- a/app/views/binary/index.html.erb
+++ b/app/views/binary/index.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <h1 class="font-bold text-4xl">Binary#index</h1>
+  <h1>Binary#index</h1>
   <%= link_to 'new Binary', new_binary_path %>
 
   <% @binaries.each do |binary| %>
