--- a/app/views/binary/edit.html.erb
+++ b/app/views/binary/edit.html.erb
@@ -1,18 +1,5 @@
 <div>
   <h1 class="font-bold text-4xl">Edit Binary</h1>
 
-  <%= form_with model: @binary, local: true do |form| %>
-    <div class="field">
-      <%= form.label :title %>
-      <%= form.text_field :title, class: 'form-control' %>
-    </div>
-    <div class="field">
-      <%= form.label :context %>
-      <%= form.text_area :context, class: 'form-control' %>
-    </div>
-    <div>
-      <%= form.submit 'Update Binary' %>
-    </div>
-  <% end %>
-  <%= link_to 'Back', binary_index_path, class: 'btn btn-secondary' %>
+  <%= render 'form', binary: @binary %>
 </div>
