--- a/app/views/binary/index.html.erb
+++ b/app/views/binary/index.html.erb
@@ -17,8 +17,11 @@
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
     <% @search_result.each do |binary| %>
       <a href="<%= binary_path(binary) %>" class="block max-w-sm mx-auto bg-white border border-gray-200 rounded-lg shadow-md overflow-hidden hover:shadow-lg transition-shadow duration-300">
-        <%# <img class="w-full h-48 object-cover" src="https://via.placeholder.com/400x200" alt="Card image"> %>
-        <img class="w-full h-48 object-cover" src="https://puppetsunsun.com/cdn/shop/files/RE_TOP2.png?v=1694446031&width=3840" alt="Card image">
+        <% if binary.image.attached? %>
+          <%= image_tag url_for(binary.image), class: "w-full h-48 object-cover", alt: "Card image" %>
+        <% else %>
+          <img class="w-full h-48 object-cover" src="https://puppetsunsun.com/cdn/shop/files/RE_TOP2.png?v=1694446031&width=3840" alt="Card image">
+        <% end %>
         <div class="p-6">
           <h2 class="text-2xl font-bold text-gray-800 mb-2"><%= binary.title %></h2>
           <p class="text-gray-600 mb-3"><%= truncate(binary.context, length: 25) %></p>
