--- a/app/views/binary/show.html.erb
+++ b/app/views/binary/show.html.erb
@@ -1,5 +1,5 @@
 <div>
   <h1 class="font-bold text-4xl">Binary Details</h1>
 
-  <%= render 'form', binary: @binary, readonly: true %>
+  <%= render 'form', binary: @binary, tags: @tags, readonly: true %>
 </div>
