--- a/app/views/binary/new.html.erb
+++ b/app/views/binary/new.html.erb
@@ -1,5 +1,5 @@
 <div>
   <h1 class="font-bold text-4xl">Create Binary</h1>
 
-  <%= render 'form', binary: @binary %>
+  <%= render 'form', binary: @binary, tags: @tags %>
 </div>
