--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,11 @@
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
 
+    <link rel="icon" href="./grow_app.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/grow_app.ico" type="image/x-icon">
+    <!-- Apple Touch Icon（iOSデバイス用） -->
+    <link rel="apple-touch-icon" href="/grow_app.png">
+
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
@@ -15,7 +20,7 @@
     <header class="bg-white shadow-md">
       <div class="container mx-auto px-4 py-3 flex justify-between items-center">
         <div>
-          <%= link_to 'GrowApp', root_path, class: 'text-xl font-bold text-blue-600' %>
+            <%= link_to image_tag('/grow_app.png', alt: 'GrowApp', style: 'height: 90px; width: auto;'), root_path, class: 'text-xl font-bold text-blue-600' %>
         </div>
         <nav>
           <% if current_user %>
